<resources>
    <string name="app_name">文件传输</string>
    <string name="tab_home">主页</string>
    <string name="tab_folders">文件</string>
    <string name="tab_friends">好友</string>
    <string name="tab_settings">设置</string>
    <string name="action_settings">设置</string>
    <string name="settings_transfer_rate_key">settings_transfer_rate_key</string>
    <string name="settings_checkbox_key">settings_checkbox_key</string>
    <string name="settings_edittext_key">settings_edittext_key</string>
    <string name="no_connection_prompt">无WiFi和蓝牙连接</string>
    <string name="enable_wifi_prompt">WiFi设置</string>
    <string name="enable_bluetooth_prompt">蓝牙设置</string>
    <string name="no_transfer_prompt">无文件传输</string>
    <string name="activity_folders">选择文件</string>
    <string name="activity_friends">选择用户</string>
    <string name="button_send">发送</string>
</resources>
