<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/foreground"
    android:orientation="vertical"
    android:paddingLeft="@dimen/fragment_padding"
    android:paddingStart="@dimen/fragment_padding"
    android:paddingRight="@dimen/fragment_padding"
    android:paddingEnd="@dimen/fragment_padding"  >

    <ListView
        android:id="@+id/android:list"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_connection_prompt"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@drawable/button_textcolor" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxHeight="@dimen/image_connection_size"
        android:maxWidth="@dimen/image_connection_size"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_connection"
        android:layout_margin="@dimen/button_connection_margin" />

    <Button
        android:id="@+id/button_wifi"
        android:layout_width="@dimen/button_connection_width"
        android:layout_height="@dimen/button_connection_height"
        android:layout_marginTop="@dimen/button_connection_margin"
        android:background="@drawable/button_home"
        android:text="@string/enable_wifi_prompt"
        android:textSize="18sp"
        android:textColor="@drawable/button_textcolor" />

    <Button
        android:id="@+id/button_bluetooth"
        android:layout_width="@dimen/button_connection_width"
        android:layout_height="@dimen/button_connection_height"
        android:layout_marginTop="@dimen/button_connection_margin"
        android:background="@drawable/button_home"
        android:text="@string/enable_bluetooth_prompt"
        android:textSize="18sp"
        android:textColor="@drawable/button_textcolor" />

</LinearLayout>
