<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="#22292C" >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/action_bar_margin"
            android:layout_marginStart="@dimen/action_bar_margin"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="@dimen/action_bar_button_size"
            android:layout_height="@dimen/action_bar_button_size"
            android:layout_marginRight="@dimen/action_bar_margin"
            android:layout_marginEnd="@dimen/action_bar_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ap9" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="@dimen/action_bar_button_size"
            android:layout_height="@dimen/action_bar_button_size"
            android:layout_marginRight="@dimen/action_bar_margin"
            android:layout_marginEnd="@dimen/action_bar_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/button_add"
            android:layout_toStartOf="@id/button_add"
            android:background="@drawable/alt" />

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_content"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#F3F3F3"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        android:orientation="horizontal"
        android:background="#FFFFFF" >

        <RelativeLayout
            android:id="@+id/layout_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxHeight="@dimen/navigation_image_height"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_tabbar_home_unselected" />

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_home"
                    android:textColor="#808080" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_folders"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_folders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxHeight="@dimen/navigation_image_height"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_tabbar_folders_unselected" />

                <TextView
                    android:id="@+id/text_folders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_folders"
                    android:textColor="#808080" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_friends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxHeight="@dimen/navigation_image_height"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_tabbar_friends_unselected" />

                <TextView
                    android:id="@+id/text_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_friends"
                    android:textColor="#808080" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxHeight="@dimen/navigation_image_height"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_tabbar_settings_unselected" />

                <TextView
                    android:id="@+id/text_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_settings"
                    android:textColor="#808080" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
